--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -130,12 +130,12 @@ spring:
       client:
         provider:
           oidc:
-            issuer-uri: http://localhost:9080/auth/realms/jhipster
+            issuer-uri: http://keycloak:9080/auth/realms/jhipster
         registration:
           oidc:
             client-id: web_app
             client-secret: web_app
-            scope: openid,profile,email
+            # scope: openid,profile,email
 
 server:
   servlet:
