--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -130,7 +130,7 @@ spring:
       client:
         provider:
           oidc:
-            issuer-uri: http://keycloak:9080/auth/realms/jhipster
+            issuer-uri: https://becare-key.herokuapp.com/auth/realms/jhipster
         registration:
           oidc:
             client-id: web_app
